--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "node server.js",
      "test": "jest",
     "test:watch": "jest --watch",
     "dev": "nodemon server.js"
